--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hazırlık Geçme Puanı Hesaplama</title>
-    <style>
+        <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f9;
             color: #333;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
         }
         .container {
             max-width: 800px;
@@ -40,13 +41,16 @@
             padding: 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            margin-top: 20px;
         }
         h1 {
             text-align: center;
             color: #4CAF50;
+            font-size: 1.8rem;
         }
         .row {
             display: flex;
+            flex-wrap: wrap;
             gap: 15px;
             margin-bottom: 10px;
             align-items: center;
@@ -54,12 +58,16 @@
         label {
             flex: 1;
             font-weight: bold;
+            font-size: 0.9rem;
         }
         input, select, button {
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
             flex: 2;
+            font-size: 0.9rem;
+            width: 100%;
+            box-sizing: border-box;
         }
         .hidden {
             display: none;
@@ -72,35 +80,78 @@
             border-radius: 4px;
             font-weight: bold;
             text-align: center;
+            font-size: 1rem;
         }
         .info-text {
-            font-size: 0.55em;
+            font-size: 0.75rem;
             color: #666;
             margin-left: 5px;
             vertical-align: middle;
-        }.footer-info-header {
+        }
+        .footer-info-header {
             display: block; 
             font-weight: 700;
-            font-size: 0.75em;
+            font-size: 0.85rem;
             color: #666;
             margin-top: 10px;
             vertical-align: middle;
-        }.footer-info-lore {
+        }
+        .footer-info-lore {
             display: block; 
             font-weight: 200;
-            font-size: 0.75em;
+            font-size: 0.85rem;
             color: #666;
             vertical-align: middle;
-        }.footer-author {
+        }
+        .footer-author {
             display: flex;
             font-weight: 900;
-            font-size: 1em;
+            font-size: 1rem;
             justify-content: center; 
             margin-top: 25px;
             color: #666;
             vertical-align: bottom;
         }
-    </style><!---asdasd-->
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+                margin-top: 10px;
+            }
+            h1 {
+                font-size: 1.5rem;
+            }
+            label {
+                font-size: 0.85rem;
+            }
+            input, select, button {
+                font-size: 0.85rem;
+            }
+            .footer-info-header, .footer-info-lore {
+                font-size: 0.75rem;
+            }
+            .result {
+                font-size: 0.9rem;
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.2rem;
+            }
+            label {
+                font-size: 0.8rem;
+            }
+            input, select, button {
+                font-size: 0.8rem;
+            }
+            .footer-info-header, .footer-info-lore {
+                font-size: 0.7rem;
+            }
+            .result {
+                font-size: 0.85rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
