--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <label class="footer-info-lore">(Modül Sonu Puanı Hesaplama) * (modül yüzdesi / 100)</label>
 
         <label class="footer-info-header">Hazırlık Geçme Puanı Hesaplama</label>
-        <label class="footer-info-lore">(Sorumlu Olunan Tüm Modüllerin Eklenecek Puanların Toplamı x 0.3) * (Yeterlilik Sınavı Puanı x 0.7)</label>
+        <label class="footer-info-lore">(Sorumlu Olunan Tüm Modüllerin Eklenecek Puanların Toplamı x 0.3) + (Yeterlilik Sınavı Puanı x 0.7)</label>
 
         <label class="footer-info-header">Modül Yüzdeleri</label>
         <label class="footer-info-lore">A1 ile başlarsanız; A1: %10, A2: %20, B1: %30, B2: %40
