--- a/index.html
+++ b/index.html
@@ -254,6 +254,10 @@
         <label class="footer-info-header">Hazırlık Geçme Puanı Kaçtır ?</label>
         <label class="footer-info-lore">Amerikan Kültürü ve Edebiyatı ile Mütercim Tercümanlık Bölümleri için <b>75</b>, diğerleri için <b>70.</b></label>
 
+        <label class="footer-info-info-header">Not</label>
+        <label class="footer-info-lore">Geçme notunuz 69.5 sa yuvarlanır 70 olur. (Kesin değil)</label>
+
+
         <label class="footer-author">A.</label>
     </div>
 
@@ -280,7 +284,7 @@
         function calculateGrade() {
             let a1 = getModuleScoreInTotal('a1');
             let a2 = getModuleScoreInTotal('a2');
-            let b1 = getModuleScoreInTotal('b1');
+            let b1 = getModuleScoreInTotal('b1
             let b2 = getModuleScoreInTotal('b2');
             const peScore = clamp(parseFloat(document.getElementById('pe-score').value) || 0, 0, 100);
             const akveimt = document.getElementById('akveimt').value;
